--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,27 @@
   "type": "commonjs",
   "dependencies": {
     "@google-cloud/storage": "^7.16.0",
+    "@google/generative-ai": "^0.24.1",
+    "@prisma/client": "^6.13.0",
     "archiver": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "express-validator": "^7.2.1",
     "firebase-admin": "^13.4.0",
+    "html-docx-js": "^0.3.1",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
+    "mammoth": "^1.10.0",
     "multer": "^2.0.2",
-    "pg": "^8.16.3"
+    "pdf-parse": "^1.1.1",
+    "pg": "^8.16.3",
+    "prisma": "^6.13.0",
+    "puppeteer": "^24.15.0",
+    "tesseract.js": "^6.0.1",
+    "uuid": "^11.1.0",
+    "ws": "^8.18.3"
   }
 }
